Implement post submission form and backend function for creating posts

--- a/board/board02.html
+++ b/board/board02.html
@@ -32,10 +32,25 @@
       <div id="read">...</div>
     </p>
 
-    <p class="lead text-secondary mb-5">
-      <button onclick="postToBoard()">글쓰기</button>
-      <div id="write">...</div>
-    </p>
+    <div class="card shadow-sm">
+        <div class="card-body">
+            <div class="mb-3">
+                <label for="title" class="form-label fw-bold">제목 (Title)</label>
+                <input type="text" class="form-control" id="title" placeholder="프로젝트 제목을 입력하세요">
+            </div>
+
+            <div class="mb-3">
+                <label for="content" class="form-label fw-bold">내용 (Content)</label>
+                <textarea class="form-control" id="content" rows="5" placeholder="상세 내용을 입력하세요"></textarea>
+            </div>
+
+            <div class="d-grid gap-2">
+                <button class="btn btn-primary btn-lg" type="button" onclick="submitPost()">
+                    <i class="bi bi-pencil-square"></i> 글쓰기
+                </button>
+            </div>
+        </div>
+    </div>
 
     <p class="lead text-secondary mb-5">
       <pre id="out"></pre>
@@ -85,42 +100,17 @@ fetch("/sidebar.html")
     });
   }
 
-const GITHUB_API_URL = "https://api.github.com/repos/teata99/langforyou/issues";
-const TOKEN = "";  
+  async function submitPost() {
+    const title = document.getElementById('title').value;
+    const content = document.getElementById('content').value;
 
-  async function postToBoard() {
-    const postData = {
-        title: "게시판 테스트 글입니다",
-        body: "이 내용은 API를 통해 작성되었습니다.",
-        labels: ["free-board"] // 카테고리처럼 활용 가능
-    };
-
-    const response = await fetch(GITHUB_API_URL, {
-        method: "POST",
-        headers: {
-            "Authorization": `token ${TOKEN}`,
-            "Content-Type": "application/json",
-            "Accept": "application/vnd.github.v3+json"
-        },
-        body: JSON.stringify(postData)
+    const response = await fetch('/.netlify/functions/create-post', {
+        method: 'POST',
+        body: JSON.stringify({ title, content })
     });
 
-    if (response.ok) {
-        const result = await response.json();
-        const write = document.getElementById('write');
-        write.innerHTML = `
-            <div>
-            <h3>글 작성 성공! 번호:</h3>
-            <p>작성자: ${result.number}</p>
-            </div>`;
-
-        console.log("글 작성 성공! 번호:", result.number);
-    } else {
-        console.error("실패:", response.statusText);
-        const errorData = await response.json();
-        console.log("에러 상세 사유:", errorData.message);
-    }
-
+    const result = await response.json();
+    alert(result.message);
   }
 
 </script>
